# dlwpt

./: .gitignore  pyproject.toml
book-notebooks/: p2_run_everything.ipynb
book-notebooks/p1ch3/: 2_named_tensors.ipynb
book-notebooks/p1ch4/: 2_volumetric_ct.ipynb
book-notebooks/p1ch5/: 2_autograd.ipynb  3_optimizers.ipynb
book-notebooks/p1ch6/: 1_neural_networks.ipynb
book-notebooks/p1ch7/: 1_datasets.ipynb  2_birds_airplanes.ipynb  p1ch6.ipynb
book-notebooks/p1ch8/: 1_convolution.ipynb
book-notebooks/p2ch10/: dsets.py
book-notebooks/p2ch11/: dsets.py  model.py  training.py
book-notebooks/p2ch12/: dsets.py  prepcache.py  training.py
book-notebooks/p2ch13/: benchmark_seg.py  dsets.py  model.py  prepcache.py  training.py
book-notebooks/p2ch14/: check_nodule_fp_rate.py  dsets.py  model.py  nodule_analysis.py  prepcache.py  screencts.py  training.py
notebooks/: 01_Tensors.ipynb  04_Real_World_Data.ipynb  05_Learning.ipynb  06_Neural_Networks.ipynb  07_Learning_from_Images.ipynb
p1ch2/: 1_making_sure_things_work.ipynb
p1ch4/: 1_image_dog.ipynb  3_tabular_wine.ipynb
src/dlwpt/: datasets.py
src/dlwpt/util/: augmentation.py  disk.py  util.py
