[project]
name = "dlwpt"
version = "0.0.1"
description = "Deep Learning with PyTorch Code"
authors = [
    {name = "inigohidalgo", email = "inigohrey@gmail.com"},
]
dependencies = [
    "torch",
    "ipykernel",
    "numpy",
    "pillow",
    "matplotlib",
    "imageio",
    "pandas"
    ]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
